RESOLVED FIXED201876
WebMDNSRegister no longer needs to be provided sessionIDs
https://bugs.webkit.org/show_bug.cgi?id=201876
Summary WebMDNSRegister no longer needs to be provided sessionIDs
Chris Dumez
Reported 2019-09-17 11:47:03 PDT
WebMDNSRegister no longer needs to be provided sessionIDs, now that we have one session per WebProcess.
Attachments
Patch (20.15 KB, patch)
2019-09-17 11:57 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-17 11:57:04 PDT
Geoffrey Garen
Comment 2 2019-09-17 13:28:33 PDT
Comment on attachment 378976 [details] Patch r=me
Chris Dumez
Comment 3 2019-09-17 13:49:41 PDT
Comment on attachment 378976 [details] Patch Clearing flags on attachment: 378976 Committed r249980: <https://trac.webkit.org/changeset/249980>
Chris Dumez
Comment 4 2019-09-17 13:49:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-09-17 13:50:22 PDT
Note You need to log in before you can comment on or make changes to this bug.